src/objects/Distribution__c.object
<CustomObject>
    <fields>
        <fullName>Assessable_Object_API__c</fullName>
        <label>Assessable Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessable_Record__c</fullName>
        <label>Assessable Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Template</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>Distributions</relationshipLabel>
        <relationshipName>Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_DateTime__c</fullName>
        <label>Distribution DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distribution_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Group</label>
        <referenceTo>Distribution_Group__c</referenceTo>
        <relationshipLabel>Distributions</relationshipLabel>
        <relationshipName>Distributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>The date after which the link(s) in this distribution will no longer allow the user to provide information via the associated assessment.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <label>Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Post_Assessment_Message__c</fullName>
        <description>This field contains message which will be displayed on survey submission.</description>
        <label>Post Assessment Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Assessment_Message__c</fullName>
        <description>This field contains message which will be displayed when survey url is launched.</description>
        <label>Pre-Assessment Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Mode__c</fullName>
        <label>Send Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anonymous Link</fullName>
                </value>
                <value>
                    <fullName>Download as CSV</fullName>
                </value>
                <value>
                    <fullName>Email with Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( 
AND(Start_Date__c &gt; TODAY(), Expiration_Date__c &gt;= Start_Date__c), 
&apos;Not Started&apos;, 
IF( 
AND(Start_Date__c &lt;= TODAY(), Start_Date__c &lt;= Expiration_Date__c, Expiration_Date__c &gt;= TODAY()), 
&apos;In Progress&apos;, 
IF( 
AND(Start_Date__c &lt;= TODAY(), ISBLANK(Expiration_Date__c)), 
&apos;In Progress&apos;,
IF( 
AND(Start_Date__c &lt; TODAY(), Expiration_Date__c &lt; TODAY(), Start_Date__c &lt;= Expiration_Date__c), 
&apos;Completed&apos;, 
&apos;&apos; 
) 
) 
)
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_Ids__c</fullName>
        <label>Target Object Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anonymous Link</fullName>
                </value>
                <value>
                    <fullName>Unique Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distribution</label>
    <nameField>
        <label>Distribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>